[gd_scene format=3 uid="uid://c0k7sp0o20exs"]

[ext_resource type="Script" uid="uid://dh8pwjfxtd7nn" path="res://scripts/gd_game_mode.gd" id="1_rxb3t"]
[ext_resource type="Theme" uid="uid://lio3q4mwr6vp" path="res://themes/hud_labels.tres" id="2_8t4oq"]
[ext_resource type="Script" uid="uid://bq4nj75bm2cx2" path="res://scripts/gd_hud.gd" id="2_257d6"]
[ext_resource type="PackedScene" uid="uid://dajx2u7qtnu6a" path="res://scenes/sc_spawner.tscn" id="3_6yofh"]
[ext_resource type="Texture2D" uid="uid://cuvfc2og3f2ci" path="res://art/sprites/background.png" id="3_csx88"]
[ext_resource type="Texture2D" uid="uid://dwq2i0eue1yx5" path="res://art/sprites/mask_yellow_fear.png" id="4_5p5lu"]
[ext_resource type="Script" uid="uid://blnfefkcsg6p2" path="res://scripts/gd_mask_button.gd" id="4_t1chd"]
[ext_resource type="Theme" uid="uid://ctri7mw5e5v30" path="res://themes/boss_name.tres" id="6_6b3ul"]
[ext_resource type="Texture2D" uid="uid://b37p5b6c820cw" path="res://art/sprites/mask_blue_dread.png" id="6_7avmb"]
[ext_resource type="PackedScene" uid="uid://dlpxgnl6157x2" path="res://scenes/sc_player_character.tscn" id="6_t1chd"]
[ext_resource type="Texture2D" uid="uid://dhm0yadrb03to" path="res://art/sprites/mask_red_wrath.png" id="7_5s7ni"]
[ext_resource type="Texture2D" uid="uid://3bh7tcjoakdf" path="res://art/sprites/sprite_heart.png" id="9_5s7ni"]
[ext_resource type="AudioStream" uid="uid://cdmkrpd58efnm" path="res://audio/music/mascara del miedo WAV.wav" id="10_ey43b"]
[ext_resource type="AudioStream" uid="uid://7stm5x1e2745" path="res://audio/music/BSO VANILLA WAV.wav" id="11_8t4oq"]
[ext_resource type="AudioStream" uid="uid://bxbpeo4dxf2lo" path="res://audio/music/mascara fatalidad WAV.wav" id="11_ove12"]
[ext_resource type="AudioStream" uid="uid://bl7jpflbelenb" path="res://audio/music/mascara de la ira 2.wav" id="12_4kxa2"]
[ext_resource type="Texture2D" uid="uid://voh2ptfdecaj" path="res://art/sprites/player_yellow_fear.png" id="16_nsa8o"]
[ext_resource type="Texture2D" uid="uid://664yyn3w5i5l" path="res://art/sprites/player_blue_dread.png" id="17_csx88"]
[ext_resource type="Texture2D" uid="uid://d1cwc7vgekhfj" path="res://art/sprites/player_red_wrath.png" id="18_5s223"]
[ext_resource type="Texture2D" uid="uid://cja27d5omaubr" path="res://art/sprites/player_default.png" id="19_jyjkd"]
[ext_resource type="AudioStream" uid="uid://1gs7abikrytt" path="res://audio/sounds/1409 DAñO PROTAGONISTA 2.wav" id="20_nsa8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoxe3"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1chd"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ScGameScene" type="Node2D" unique_id=1235023744]

[node name="BSOBase" type="AudioStreamPlayer2D" parent="." unique_id=72949698]
stream = ExtResource("11_8t4oq")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=484044214]
follow_viewport_enabled = true

[node name="Hud" type="Control" parent="CanvasLayer" unique_id=747635321]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_257d6")

[node name="CountDownLabel" type="Label" parent="CanvasLayer/Hud" unique_id=939059365]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 44.0
offset_right = 20.0
offset_bottom = 79.0
grow_horizontal = 2
theme = ExtResource("2_8t4oq")

[node name="CurrentWaveLable" type="Label" parent="CanvasLayer/Hud" unique_id=1594583980]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 7.0
offset_right = 20.0
offset_bottom = 30.0
grow_horizontal = 2
theme = ExtResource("2_8t4oq")

[node name="Mask1" type="TextureButton" parent="CanvasLayer/Hud" unique_id=677613697]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -295.99994
offset_top = 12.0
offset_right = -116.0
offset_bottom = 192.0
grow_horizontal = 0
scale = Vector2(0.44330457, 0.44330457)
texture_normal = ExtResource("4_5p5lu")
stretch_mode = 0
script = ExtResource("4_t1chd")

[node name="Mask2" type="TextureButton" parent="CanvasLayer/Hud" unique_id=671479748]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -194.99988
offset_top = 12.0
offset_right = -14.999756
offset_bottom = 192.0
grow_horizontal = 0
scale = Vector2(0.44330457, 0.44330457)
texture_normal = ExtResource("6_7avmb")
stretch_mode = 0
script = ExtResource("4_t1chd")
mask_type = 1

[node name="Mask3" type="TextureButton" parent="CanvasLayer/Hud" unique_id=767062227]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = 12.0
offset_right = 86.0
offset_bottom = 192.0
grow_horizontal = 0
scale = Vector2(0.44330457, 0.44330457)
texture_normal = ExtResource("7_5s7ni")
stretch_mode = 0
script = ExtResource("4_t1chd")
mask_type = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Hud" unique_id=1578502236]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -26.0
offset_right = -21.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_xoxe3")
theme_override_styles/fill = SubResource("StyleBoxFlat_t1chd")
value = 100.0
show_percentage = false

[node name="BossName" type="Label" parent="CanvasLayer/Hud" unique_id=363259925]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = -78.0
offset_right = 215.0
offset_bottom = -29.0
grow_vertical = 0
theme = ExtResource("6_6b3ul")
text = "Máscara de la Esperanza"

[node name="Heart1" type="TextureRect" parent="CanvasLayer/Hud" unique_id=1305255718]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 144.0
offset_bottom = 137.0
scale = Vector2(0.4687055, 0.4687055)
texture = ExtResource("9_5s7ni")

[node name="Heart2" type="TextureRect" parent="CanvasLayer/Hud" unique_id=164012465]
layout_mode = 0
offset_left = 87.0
offset_top = 9.0
offset_right = 215.0
offset_bottom = 137.0
scale = Vector2(0.4687055, 0.4687055)
texture = ExtResource("9_5s7ni")

[node name="Heart3" type="TextureRect" parent="CanvasLayer/Hud" unique_id=1745196566]
layout_mode = 0
offset_left = 156.0
offset_top = 9.0
offset_right = 284.0
offset_bottom = 137.0
scale = Vector2(0.4687055, 0.4687055)
texture = ExtResource("9_5s7ni")

[node name="GameMode" type="Node" parent="." unique_id=1258769651]
script = ExtResource("1_rxb3t")
waves_times = Array[float]([20.0, 30.0, 40.0, 50.0, 60.0])
audio_stream_mask_1 = ExtResource("10_ey43b")
audio_stream_mask_2 = ExtResource("11_ove12")
audio_stream_mask_3 = ExtResource("12_4kxa2")

[node name="WaveTimer" type="Timer" parent="GameMode" unique_id=2000740856]

[node name="MaskColdownTimer" type="Timer" parent="GameMode" unique_id=1060406493]
wait_time = 3.0
one_shot = true

[node name="EnemySpawner" parent="." unique_id=273118067 instance=ExtResource("3_6yofh")]
enemies_speed = 4.0

[node name="PlayerCharacter" parent="." unique_id=506079994 instance=ExtResource("6_t1chd")]
z_index = 1
spawn_grenade_time = 1.5
mask_1_text = ExtResource("16_nsa8o")
mask_2_text = ExtResource("17_csx88")
mask_3_text = ExtResource("18_5s223")
mask_default_text = ExtResource("19_jyjkd")

[node name="AudioStreamMasks" type="AudioStreamPlayer2D" parent="." unique_id=1701278273]

[node name="AudioStreamHit" type="AudioStreamPlayer2D" parent="." unique_id=230811269]
stream = ExtResource("20_nsa8o")
volume_db = 2.5

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1300448986]
modulate = Color(0.5971758, 0.5971763, 0.5971758, 1)
z_index = -1
texture = ExtResource("3_csx88")
centered = false

[connection signal="mask_clicked_signal" from="CanvasLayer/Hud/Mask1" to="GameMode" method="_on_mask_clicked"]
[connection signal="pressed" from="CanvasLayer/Hud/Mask1" to="CanvasLayer/Hud/Mask1" method="_on_pressed"]
[connection signal="mask_clicked_signal" from="CanvasLayer/Hud/Mask2" to="GameMode" method="_on_mask_clicked"]
[connection signal="pressed" from="CanvasLayer/Hud/Mask2" to="CanvasLayer/Hud/Mask2" method="_on_pressed"]
[connection signal="mask_clicked_signal" from="CanvasLayer/Hud/Mask3" to="GameMode" method="_on_mask_clicked"]
[connection signal="pressed" from="CanvasLayer/Hud/Mask3" to="CanvasLayer/Hud/Mask3" method="_on_pressed"]
[connection signal="timeout" from="GameMode/WaveTimer" to="GameMode" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="GameMode/MaskColdownTimer" to="GameMode" method="_on_mask_coldown_timer_timeout"]
[connection signal="player_hit_signal" from="PlayerCharacter" to="GameMode" method="_on_player_character_player_hit"]
